feat: first commit

--- a/frontend/src/app/list-item/list-item-template-html/list-item.page.html
+++ b/frontend/src/app/list-item/list-item-template-html/list-item.page.html
@@ -22,10 +22,10 @@
       <div>ID</div>
     </ion-col>
     <ion-col size="2">
-      <div>CAMPO 1</div>
+      <div>CAMPO 1AA</div>
     </ion-col>
-    <ion-col size="4"> 
-      <div>CAMPO 2</div>
+    <ion-col size="4">
+      <div>CAMPO</div>
     </ion-col>
     <ion-col size="2">
     </ion-col>
